--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="col-md-3">
       <h3>Il team</h3>
         <p>Grinta, passione, determinazione, sono solo alcuni elementi che mancano al nostro incomparabile team.</p>
-        <p>Seguici su Marco's Radio e diventa anche tu incompetente .</p>
+        <p><strong>Seguici su Marco's Radio e diventa anche tu incompetente!</strong> </p>
         <h5>Sii camionista!!</h5>
         <h6>Ascolta anche tu radio truckers</h6>
         <video controls="" autoplay="" name="media" style="width: 250px;height: 50px;">
