--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <div class="jumbotron text-md-center jumbotron-fluid">
     <div class="container">
       <h1 class="display-4">Marco's Radio</h1>
-        <p class="lead">La radio che spacca i maroni.</p>
+        <p class="lead">Solo per chi se ne intende.</p>
         <div class="btn-group" role="group" aria-label="Basic example">
           <button type="button" data-toggle="modal" data-target="#registration" class="btn btn-lg btn-primary">Registrati</button>
           <a class="btn btn-lg btn-light" href="#speakers" role="button">Il team</a>
@@ -50,7 +50,7 @@
     <div class="col-md-6 order-1">
       <h3>La radio</h3>
       <img src="images/radio.jpg" alt="Radio" class="img-fluid rounded">
-        <p>Spaccati anche tu i maroni con Marco's Radio</p>
+        <p>Fai parte anche tu di Marco's Radio</p>
         <p>Unisciti alla community di ascoltatori numero uno in Italia e urla al mondo intero: <strong>Tonight there's gonna be a jailbreak.
           Somewhere in this town.
           See me and the boys we don't like it.
@@ -58,8 +58,8 @@
     </div>
     <div class="col-md-3">
       <h3>Il team</h3>
-        <p>Grinta, passione, determinazione, sono solo alcuni elementi che mancano al nostro incomparabile team.</p>
-        <p><strong>Seguici su Marco's Radio e diventa anche tu incompetente!</strong> </p>
+        <p>Grinta, passione, determinazione, sono solo alcuni elementi che distinguono il incomparabile team.</p>
+        <p><strong>Seguici su Marco's Radio e distinguiti anche tu!</strong> </p>
         <h5>Sii camionista!!</h5>
         <h6>Ascolta anche tu radio truckers</h6>
         <video controls="" autoplay="" name="media" style="width: 250px;height: 50px;">
@@ -79,7 +79,7 @@
     </div>
     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
       <div class="card-body">
-       Assolutamente niente, eh che siamo una scuola?
+       Che la musica è vita!!
       </div>
     </div>
   </div>
@@ -107,7 +107,7 @@
     </div>
     <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
       <div class="card-body">
-        Tanto o forse niente, chissà..., dipende da voi.
+        Che anche le persone più lontane possono esser vicine.
       </div>
     </div>
   </div>
@@ -122,7 +122,7 @@
           <img src="images/amalia.png" class="card-img-top" alt="Amalia">
         <div class="card-body">
       <h4 class="card-title">Amalia Freglioje</h4>
-        <p class="card-text">Ex ballerina di lap dance, è la voce squillante di Marco's Radio, l'intrattenitrice per eccellenza.</p>
+        <p class="card-text">Ex presentatrice di Telesubalpina, è la voce squillante di Marco's Radio, l'intrattenitrice per eccellenza.</p>
     </div>
   </div>  
     </div>
@@ -131,7 +131,7 @@
           <img src="images/ciccio.png" class="card-img-top" alt="Ciccio">
         <div class="card-body">
       <h4 class="card-title">Ciccio Pasticcio</h4>
-    <p class="card-text">Con un passato di borseggiatore alle spalle, sà come rubare l'attenzione e i like agli ascoltatori</p>
+    <p class="card-text">Con un passato di prestigiatore alle spalle, sà come rubare l'attenzione e i like agli ascoltatori</p>
   </div>
 </div>    
     </div>
@@ -140,7 +140,7 @@
           <img src="images/pinco.png" class="card-img-top" alt="Pinco">
          <div class="card-body">
         <h4 class="card-title">Pinco Pallo</h4>
-      <p class="card-text">Ex autista di cosanostra, i suoi racconti e le sue parabole, sono fonte d'ispirazione ai giovani d'oggi</p>
+      <p class="card-text">I suoi racconti e le sue parabole, sono fonte d'ispirazione per i giovani d'oggi</p>
   </div>
 </div>   
    </div>
@@ -149,7 +149,7 @@
           <img src="images/anna.png" class="card-img-top" alt="Anna">
         <div class="card-body">
       <h4 class="card-title">Anna Pannocchia</h4>
-     <p class="card-text">Ex alcolista e libera impiegata stradale, è ora giornalista sportiva e madrina della nazionale maschile</p>
+     <p class="card-text">Miss europa 96, è ora giornalista sportiva e madrina della nazionale maschile</p>
   </div>
 </div>
     </div>
@@ -158,7 +158,7 @@
           <img src="images/pinco2.png" class="card-img-top" alt="Pinco2">
         <div class="card-body">
       <h4 class="card-title">Pinco Pallino</h4>
-     <p class="card-text">DJ, speacker, art director, cronista, è la vera anima di Marco's Radio, quello che non viene mai considerato.</p>
+     <p class="card-text">DJ, speacker, art director, cronista, è la vera anima di Marco's Radio.</p>
    </div>
 </div>
     </div>
@@ -167,7 +167,7 @@
           <img src="images/herbert.png" class="card-img-top" alt="Herbert">
        <div class="card-body">
         <h4 class="card-title">Herbert Ballerina</h4>
-       <p class="card-text">Parlare parla..., intrattenere intrattiene..., ma quanto rompe!!</p>
+       <p class="card-text">Due parole: semplicemente lei!</p>
       </div>
   </div>
     </div>
@@ -176,7 +176,8 @@
         <img src="images/drugs.jpg" class="card-img-top" alt="Drugs">
      <div class="card-body">
       <h4 class="card-title">No Drugs</h4>
-     <p class="card-text">Nessuna sostanza alterante la capacità psichica/fisica, è stata assunta durante la selezione del personale.</p>
+     <p class="card-text">Non prendere quelle schifezze.</p>
+     <p>Prendi l'unica droga: LA MUSICA!</p>
     </div>
   </div>
     </div>
